fix: java 8 set.of to hashset