@@ -7,6 +7,8 @@ import net.pitan76.assetbridge.asset.AssetVersion;
 import net.pitan76.assetbridge.util.Json;
 
 import java.nio.charset.StandardCharsets;
+import java.util.Arrays;
+import java.util.HashSet;
 import java.util.Set;
 
 /**
@@ -38,7 +40,7 @@ public class RecipeConverter implements AssetConverter {
                 "minecraft:smithing_trim"
         );
         *///?} else {
-        SUPPORTED_TYPES = Set.of(
+        SUPPORTED_TYPES = new HashSet<>(Arrays.asList(
                 "minecraft:crafting_shaped",
                 "minecraft:crafting_shapeless",
                 "minecraft:smelting",
@@ -47,7 +49,7 @@ public class RecipeConverter implements AssetConverter {
                 "minecraft:campfire_cooking",
                 "minecraft:stonecutting",
                 "minecraft:smithing"
-        );
+        ));
         //?}
     }
 
@@ -85,12 +87,12 @@ public class RecipeConverter implements AssetConverter {
             JsonElement typeEl = json.get("type");
             if (typeEl != null && typeEl.isJsonPrimitive()) {
                 String rType = qualify(typeEl.getAsString());
-                Set<String> cookingTypes = Set.of(
+                Set<String> cookingTypes = new HashSet<>(Arrays.asList(
                         "minecraft:smelting",
                         "minecraft:blasting",
                         "minecraft:smoking",
                         "minecraft:campfire_cooking"
-                );
+                ));
                 if (cookingTypes.contains(rType)) {
                     boolean isLegacyCookingResult = !net.pitan76.assetbridge.asset.RuntimePack.generation().isAtLeast(net.pitan76.assetbridge.asset.AssetVersion.ATLASES);
                     if (isLegacyCookingResult) {
